--- a/proyecto-19-webservice/package.json
+++ b/proyecto-19-webservice/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "npm-run-start": "node app.js",
-    "start": "node index.js",
-    "dev": "DEBUG=clinica-api:* nodemon index.js"
+    "start": "node ./bin/www",
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -19,7 +19,8 @@
     "http-errors": "^2.0.0",
     "moment": "^2.29.4",
     "mongoose": "^8.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "jose": "^5.1.1",
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
