--- a/proyecto-19-webservice/package.json
+++ b/proyecto-19-webservice/package.json
@@ -20,7 +20,7 @@
     "moment": "^2.29.4",
     "mongoose": "^8.0.2",
     "morgan": "^1.10.0",
-    "jose": "^5.1.1",
+    "jose": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
