--- a/proyecto-19-webservice/package.json
+++ b/proyecto-19-webservice/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "npm-run-start": "node app.js",
     "start": "node ./bin/www",
-    "dev": "nodemon index.js"
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
