--- a/proyecto-19-webservice/package.json
+++ b/proyecto-19-webservice/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "npm-run-start": "node app.js",
+    "npm-run-start": "node index.js",
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
   },
