--- a/proyecto-19-webservice/.env
+++ b/proyecto-19-webservice/.env
@@ -2,4 +2,4 @@ PORT=3001
 MONGO_URI="mongodb+srv://admin:wHkwdBLw7RVY2sIp@cluster0.zbarl1m.mongodb.net/clinica-proyecto?retryWrites=true&w=majority"
 DEBUG=app:*
 TOKEN_SECRET=vDnPhKwwbozVOS0NZI1h6yxybCTmgz6o0OK
-CLIENT_URL="https://cute-pear-eel-fez.cyclic.app/"
+CLIENT_URL="https://salud-en-tus-manos.vercel.app/"
