--- a/proyecto-19-webservice/package.json
+++ b/proyecto-19-webservice/package.json
@@ -17,10 +17,10 @@
     "express-validator": "^7.0.1",
     "global": "^4.4.0",
     "http-errors": "^2.0.0",
+    "jose": "^5.1.1",
     "moment": "^2.29.4",
     "mongoose": "^8.0.2",
-    "morgan": "^1.10.0",
-    "jose": "^5.1.1"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
