--- a/proyecto-19-client/vercel.json
+++ b/proyecto-19-client/vercel.json
@@ -1,5 +1,5 @@
 {
     "rewrites":[
-        {"source": "/api/:path*", "destination":"https://cute-pear-eel-fez.cyclic.app/api/:path*"}
+        {"source": "/(.*)", "destination":"/"}
     ]
 }
